Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 6.1.0 Beta3
-
Fix Version/s: 6.1.0 Beta3, 6.2.0 Alpha
-
Component/s: CoAP
-
Labels:
-
Environment:Windows10
-
Platform/s:
-
Commits:2ad13f78fb4409b039fc39d331a0b095f41b3e76 (qt/qtcoap/dev) 7c19eda80d1203bad26359a15730609525a644d4 (qt/qtcoap/6.1)
Description
Qt 6.1.0 beta3 src archive extracted.
Run configure:
cmake -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DCMAKE_C_COMPILER=gcc -DCMAKE_CXX_COMPILER=g++ -DCMAKE_BUILD_TYPE=Release -DQT_BUILD_EXAMPLES=OFF -DOPENSSL_ROOT_DIR=C:\openssl\include\.. -DFEATURE_system_zlib=OFF -DFEATURE_system_tiff=OFF -DFEATURE_system_freetype=OFF -DFEATURE_system_jpeg=OFF -DPostgreSQL_ROOT=C:\Utils\postgresql\pgsql\lib\.. -DQT_BUILD_TESTS=OFF C:\Users\qt\RTA\src-6.1.0 -DCMAKE_INSTALL_PREFIX:PATH=C:\Users\qt\RTA\src-6.1.0\qtbase
Finishes fine.
Build:
cmake --build . --parallel
Fails with:
FAIL 21:43:13 FAILED: C:\MINGW810\mingw64\bin\g++.exe -DCoap_EXPORTS -DMINGW_HAS_SECURE_API=1 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_COAP_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_USE_QSTRINGBUILDER -DUNICODE -DWIN32 -DWIN64 -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_USE_MATH_DEFINES -D_WIN32_WINNT=0x0601 -D_WIN64 -Iqtcoap/src/coap/Coap_autogen/include -Iqtbase/include -Iqtbase/include/QtCoap -Iqtcoap/src/coap -Iqtbase/include/QtCoap/6.1.0 -Iqtbase/include/QtCoap/6.1.0/QtCoap -Iqtbase/include/QtCore -Iqtbase/mkspecs/win32-g++ -Iqtbase/src/corelib -Iqtbase/include/QtCore/6.1.0 -Iqtbase/include/QtCore/6.1.0/QtCore -Iqtbase/include/QtNetwork -DNDEBUG -O2 -fvisibility=hidden -fno-keep-inline-dllexport -Wall -Wextra -fno-exceptions -Wno-error=invalid-offsetof -std=c++17 -Winvalid-pch -include C:/Users/qt/RTA/src-6.1.0/qtcoap/src/coap/CMakeFiles/Coap.dir/cmake_pch.hxx -MD -MT qtcoap/src/coap/CMakeFiles/Coap.dir/Coap_autogen/mocs_compilation.cpp.obj -MF qtcoap\src\coap\CMakeFiles\Coap.dir\Coap_autogen\mocs_compilation.cpp.obj.d -o qtcoap/src/coap/CMakeFiles/Coap.dir/Coap_autogen/mocs_compilation.cpp.obj -c qtcoap/src/coap/Coap_autogen/mocs_compilation.cpp (Screenshot taken from the desktop is invalid) In file included from qtbase/include/QtCore/qmetatype.h:1, from qtbase/include/QtCore/../../src/corelib/kernel/qobject.h:54, from qtbase/include/QtCore/qobject.h:1, from C:/Users/qt/RTA/src-6.1.0/qtbase/src/corelib/animation/qabstractanimation.h:43, from C:/Users/qt/RTA/src-6.1.0/qtbase/include/QtCore/qabstractanimation.h:1, from C:/Users/qt/RTA/src-6.1.0/qtbase/include/QtCore/QtCore:6, from C:/Users/qt/RTA/src-6.1.0/qtcoap/src/coap/CMakeFiles/Coap.dir/cmake_pch.hxx:5, from <command-line>: C:/Users/qt/RTA/src-6.1.0/qtcoap/src/coap/qcoapprotocol_p.h:173:1: error: specialization of 'QMetaTypeId<QHostAddress>' after instantiation Q_DECLARE_METATYPE(QHostAddress) ^~~~~~~~~~~~~~~~~~ C:/Users/qt/RTA/src-6.1.0/qtcoap/src/coap/qcoapprotocol_p.h:173:1: error: redefinition of 'struct QMetaTypeId<QHostAddress>' qtbase/include/QtCore/../../src/corelib/kernel/qmetatype.h:1049:8: note: previous definition of 'struct QMetaTypeId<QHostAddress>' struct QMetaTypeId : public QMetaTypeIdQObject<T> ^~~~~~~~~~~ ninja: build stopped: subcommand failed.