Remove the unneeded Q_DECLARE_METATYPE(QHostAddress) declaration

Pick-to: 6.1
Fixes: QTBUG-92256
Change-Id: Id88ba4f280b02a140f9bc821b22eccc52cc7dae0
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>